--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/react": "^16.9.50",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.3",
+    "@types/uuid": "^8.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
